# ecs-sam-dice

./: .gitignore  Makefile  readme.md
fargate/: Cargo.toml  Dockerfile  docker-compose-local.yml  docker-compose.yml
fargate/src/: main.rs
iac/: samconfig.toml  template.yaml  vpc.yaml
iac/base/: samconfig.toml  template.yaml
