[package]
name = "dice-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
aws-config = { version= "1.1.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.14.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"